# igo-unidic

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
